# plonky2_ed25519

./: Cargo.toml  README.md
src/: lib.rs  main.rs  serialization.rs
src/curve/: curve_adds.rs  curve_multiplication.rs  curve_types.rs  ed25519.rs  eddsa.rs  mod.rs
src/field/: ed25519_base.rs  ed25519_scalar.rs  mod.rs
src/gadgets/: curve.rs  eddsa.rs  mod.rs  nonnative.rs  split_nonnative.rs
