[package]
name = "plonky2_ed25519"
description = "Plonky2 implementation of Ed25519"
authors = ["Utsav Jain <utsav@atomlabs.one>"]
keywords = ["snark", "plonky2", "Ed25519"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = {git = "https://github.com/Electron-Labs/plonky2",  branch = "derive_bn254_from_ff"}
plonky2_crypto = {git = "https://github.com/Electron-Labs/plonky2-crypto"}
plonky2_sha512 = {git = "https://github.com/Electron-Labs/plonky2_sha512"}
curve25519-dalek = { git = "https://github.com/Electron-Labs/curve25519-dalek"}
itertools = { version = "0.11.0", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
anyhow = { version = "1.0.40", default-features = false }
rand = { version = "0.8.4", default-features = false }
sha2 = "0.10"
log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
serde_json = "1.0"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0
